# renderer
option('dx9', type: 'feature', value: 'auto')
option('dx10', type: 'feature', value: 'auto')
option('dx11', type: 'feature', value: 'auto')
option('dx12', type: 'feature', value: 'auto')
option('metal', type: 'feature', value: 'auto')
option('opengl2', type: 'feature', value: 'auto')
option('opengl3', type: 'feature', value: 'auto')
option('vulkan', type: 'feature', value: 'auto')

#platform
option('glfw', type: 'feature', value: 'auto')
option('osx', type: 'feature', value: 'auto')
option('sdl2', type: 'feature', value: 'auto')
option('win32', type: 'feature', value: 'auto')
option('glut', type: 'feature', value: 'auto')

#opengl libs
option('glew', type: 'feature', value: 'auto')

#frameworks
option('marmalade', type: 'feature', value: 'auto')
option('allegro5', type: 'feature', value: 'auto')
